--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.0
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
 WTForms==3.1.2
-email-validator==2.1.0.post1
+email-validator
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.34
 Werkzeug==3.0.1
@@ -10,3 +10,4 @@ Jinja2==3.1.4
 python-dotenv==1.0.1
 requests==2.32.3
 dotenv
+flask_migrate
